
add_executable(04.sockfd_to_family sockfd_to_family.c)
add_executable(04.time-client time-client.c)
add_executable(04.time-server time-server.c)
add_executable(04.time-server-multi-process time-server-multi-process.c)
add_executable(04.client-connect-to-nonexist-server client-connect-to-nonexist-server.c)